fixed spacing issue

--- a/client/src/components/Card/style.css
+++ b/client/src/components/Card/style.css
@@ -9,8 +9,8 @@ body,
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu,
-    roboto, noto, segoe ui, arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
+    helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
   background: transparent;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -27,10 +27,10 @@ body {
   justify-content: center;
   overflow: hidden;
   background: #f0f0f0;
- 
 }
 
 .card {
+  margin: 0 auto;
   width: 40ch;
   height: 40ch;
   background: white;
@@ -49,18 +49,17 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-    .card {
-        width: 30ch;
-        height: 30ch;
-        background: white;
-        border-radius: 5px;
-        background-image: url(../../images/react.png);
-        background-size: cover;
-        background-position: center center;
-        box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.3);
-        transition: box-shadow 0.5s;
-        will-change: transform;
-        /* border: 15px solid white; */
-      }
-      
+  .card {
+    width: 30ch;
+    height: 30ch;
+    background: white;
+    border-radius: 5px;
+    background-image: url(../../images/react.png);
+    background-size: cover;
+    background-position: center center;
+    box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.3);
+    transition: box-shadow 0.5s;
+    will-change: transform;
+    /* border: 15px solid white; */
+  }
 }
