--- a/client/src/components/FlipCard/style.css
+++ b/client/src/components/FlipCard/style.css
@@ -1,22 +1,22 @@
 html,
 body,
 #root {
-  margin: 0;
+  /* margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
   overflow: hidden;
   user-select: none;
-  background: #f0f0f0;
+  background: #f0f0f0; */
 }
 
 #root > div {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
   display: flex;
-  margin-top: 160px;
+  /* margin-top: 160px; */
   /* align-items: center; */
-  justify-content: center;
+  /* justify-content: center;  */
 }
 
 .c {
